--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs>
     <!-- create your content here. just a box for now -->
-    <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+    
+    <a-entity gltf-model="model.gltf" />
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera type='pattern' url='pattern-Globant_.patt'></a-marker-camera>
   </a-scene>
