--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <a-scene embedded arjs>
     <!-- create your content here. just a box for now -->
     
-    <a-entity gltf-model="model.gltf" />
+    <!-- define your gltf asset -->
+<a-assets>
+  <a-asset-item id="tree" src="model.gltf"></a-asset-item>
+</a-assets>
+<!-- use your gltf model -->
+<a-entity gltf-model="##tree"></a-entity>
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera type='pattern' url='pattern-Globant_.patt'></a-marker-camera>
   </a-scene>
