--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs>
     <!-- create your content here. just a box for now -->
-    
     <!-- define your gltf asset -->
-<a-assets>
-  <a-asset-item id="tree" src="model.gltf"></a-asset-item>
-</a-assets>
-<!-- use your gltf model -->
-<a-entity gltf-model="##tree"></a-entity>
+      <a-assets>
+        <a-asset-item id="tree" src="model.gltf"></a-asset-item>
+      </a-assets>
+    <!-- use your gltf model -->
+    <a-entity gltf-model="#tree" scale="0.01 0.01 0.01"></a-entity>
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera type='pattern' url='pattern-Globant_.patt'></a-marker-camera>
   </a-scene>
