--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs>
-    <!-- create your content here. just a box for now -->
-    <!-- define your gltf asset -->
-      <a-assets>
-        <a-asset-item id="tree" src="model.gltf"></a-asset-item>
-      </a-assets>
-    <!-- use your gltf model -->
-    <a-entity gltf-model="#tree" scale="0.01 0.01 0.01"></a-entity>
+    <a-text value="Hello, World!"></a-text>
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera type='pattern' url='pattern-Globant_.patt'></a-marker-camera>
   </a-scene>
