--- a/index.html
+++ b/index.html
@@ -2,16 +2,27 @@
 <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
 <!-- include ar.js for A-Frame -->
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-<body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded arjs>
-    <!-- create your content here. just a box for now -->
-    <!-- define your gltf asset -->
-      <a-assets>
-        <a-asset-item id="tree" src="model.gltf"></a-asset-item>
-      </a-assets>
-    <!-- use your gltf model -->
-    <a-entity gltf-model="#tree" scale="0.01 0.01 0.01"></a-entity>
-    <!-- define a camera which will move according to the marker position -->
-    <a-marker-camera type='pattern' url='pattern-Globant_.patt'></a-marker-camera>
-  </a-scene>
-</body>
+<script>
+  AFRAME.registerComponent('modify-materials', {
+    init: function () {
+      // Wait for model to load.
+      this.el.addEventListener('model-loaded', () => {
+        // Grab the mesh / scene.
+        const obj = this.el.getObject3D('mesh');
+        // Go over the submeshes and modify materials we want.
+        obj.traverse(node => {
+          if (node.name.indexOf('ship') !== -1) {
+            node.material.color.set('red');
+          }
+        });
+      });
+    }
+  });
+</script>
+
+<a-scene background="color: #ECECEC">
+  <a-assets>
+    <a-asset-item id="cityModel" src="https://cdn.aframe.io/test-models/models/glTF-2.0/virtualcity/VC.gltf"></a-asset-item>
+  </a-assets>
+  <a-entity gltf-model="#cityModel" modify-materials></a-entity>
+</a-scene>
