--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
-<!-- include A-Frame obviously -->
-<script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
-<!-- include ar.js for A-Frame -->
-<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-<script>
-  AFRAME.registerComponent('modify-materials', {
-    init: function () {
-      // Wait for model to load.
-      this.el.addEventListener('model-loaded', () => {
-        // Grab the mesh / scene.
-        const obj = this.el.getObject3D('mesh');
-        // Go over the submeshes and modify materials we want.
-        obj.traverse(node => {
-          if (node.name.indexOf('ship') !== -1) {
-            node.material.color.set('red');
-          }
-        });
-      });
-    }
-  });
-</script>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>GeoAR.js demo</title>
+    <script src='https://aframe.io/releases/0.9.2/aframe.min.js'></script>
+    <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
+    <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+    <script>
+        THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
+    </script>
+</head>
 
-<a-scene background="color: #ECECEC">
-  <a-assets>
-    <a-asset-item id="cityModel" src="https://cdn.aframe.io/test-models/models/glTF-2.0/virtualcity/VC.gltf"></a-asset-item>
-  </a-assets>
-  <a-entity gltf-model="#cityModel" modify-materials></a-entity>
-</a-scene>
+<body style='margin: 0; overflow: hidden;'>
+    <a-scene
+        vr-mode-ui="enabled: false"
+		embedded
+        arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
+        <a-entity gltf-model="model.gltf" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: 73.075943; latitude: 21.121336;" animation-mixer/>
+
+        <a-camera gps-camera rotation-reader></a-camera>
+	</a-scene>
+
+</body>
