--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<script src=”https://aframe.io/releases/0.6.1/aframe.min.js">0</script>
-<script src=”https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+<script src="https://aframe.io/releases/0.6.1/aframe.min.js">0</script>
+<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs='sourceType: webcam;'>
-      <a-marker preset=’hiro’>
+      <a-marker preset="hiro">
         <a-entity 
-            gltf-model=”url(model.gltf)”>
+            gltf-model="url(model.gltf)">
         </a-entity>
       </a-marker>
   <a-entity camera>
