--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       id="drone"
       position="0 0 0"
       scale="1 1 1"
-      gltf-model-next="src: url(models/busterDrone.gltf);"
+      gltf-model-next="src: url(./models/busterDrone.gltf);"
       animation-mixer>
       </a-entity>
     </a-marker>
