--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded artoolkit='sourceType: webcam;'>
+   <a-text value="Mahesh Lalwani"></a-text>
     <!--
       glTF 2.0 Model - busterDrone.gltf
       Using the default hiro marker (Get it below)
