--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs="sourceType: webcam;">
-      <a-marker preset=’hiro’>
+      <a-marker preset='hiro'>
         <!-- Adding an OBJ file to an AR Project-->
         <a-entity 
             obj-model="obj: url(Mesh_Cat.obj); 
