--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <a-scene embedded arjs="sourceType: webcam;">
       <a-marker preset='hiro'>
         <!-- Adding an OBJ file to an AR Project-->
-        <a-entity 
+        <a-entity position="0 0 0" scale="1 1 1"
             obj-model="obj: url(Mesh_Cat.obj); 
             mtl: url(Mesh_Cat.mtl)">
         </a-entity>
