--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       <a-marker preset='hiro'>
         <!-- Adding an OBJ file to an AR Project-->
         <a-entity position="0 0 0" scale="1 1 1"
-            obj-model="obj: url(Mesh_Cat.obj); 
-            mtl: url(Mesh_Cat.mtl)">
+            obj-model="obj: url(flying_sacuer.obj); 
+            mtl: url(flying_sacuer.mtl)">
         </a-entity>
               
       </a-marker>
