--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       <a-marker preset='hiro'>
         <!-- Adding an OBJ file to an AR Project-->
         <a-entity position="0 0 0" scale="1 1 1"
-            obj-model="obj: url(Sunglasses_01.obj); 
-            mtl: url(Sunglasses_01.mtl)">
+            obj-model="obj: url(Sunglasses.obj); 
+            mtl: url(Sunglasses.mtl)">
         </a-entity>
               
       </a-marker>
