--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs="sourceType: webcam;">
-      <a-marker preset='hiro'>
+      <a-marker-camera type='pattern' url='pattern-Globant_.patt'></a-marker-camera>
         <!-- Adding an OBJ file to an AR Project-->
         <a-entity position="0 0 0" scale="1 1 1"
             obj-model="obj: url(model.obj); 
