--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
       <a-marker-camera type='pattern' url='pattern-Globant_.patt'></a-marker-camera>
         <!-- Adding an OBJ file to an AR Project-->
         <a-entity position="0 0 0" scale="1 1 1"
-            obj-model="obj: url(model.obj); 
-            mtl: url(materials.mtl)">
+            obj-model="obj: url(HANA_TABLE_LAMP_OBJ.obj);>
         </a-entity>
               
       </a-marker>
