--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
       <a-marker-camera type='pattern' url='pattern-Globant_.patt'></a-marker-camera>
         <!-- Adding an OBJ file to an AR Project-->
         <a-entity position="0 0 0" scale="1 1 1"
-            obj-model="obj: url(calculator.obj);>
+            obj-model="obj: url(chair/cushion_armchair.obj); 
+            mtl: url(chair/cushion_armchair.mtl)">
         </a-entity>
               
       </a-marker>
