--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <a-scene embedded arjs="sourceType: webcam;">
       <a-marker-camera type='pattern' url='pattern-Globant_.patt'></a-marker-camera>
         <!-- Adding an OBJ file to an AR Project-->
-        <a-entity position="0 0 0" scale="1 1 1"
-            obj-model="obj: url(chair/cushion_armchair.obj); 
-            mtl: url(chair/cushion_armchair.mtl)">
+        <a-entity 
+          collada-model=”url(cushion_armchair.dae)”>
         </a-entity>
               
       </a-marker>
