--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<script src=”https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-<script src=”https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+<script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 
-<body style=’margin : 0px; overflow: hidden;’>
-  <a-scene embedded arjs=’sourceType: webcam;’>
-      <a-marker preset=’hiro’>
+<body style="margin : 0px; overflow: hidden;">
+  <a-scene embedded arjs="sourceType: webcam;">
+      <a-marker preset="hiro">
         <!-- Adding an OBJ file to an AR Project-->
         <a-entity 
           collada-model=”url(cushion_armchair)”>
