--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <a-marker preset="hiro">
         <!-- Adding an OBJ file to an AR Project-->
         <a-entity 
-          collada-model=”url(cushion_armchair)”>
+          collada-model=”url(cushion_armchair.dae)”>
         </a-entity>
               
       </a-marker>
