--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <a-marker-camera type='pattern' url='pattern-Globant_.patt'></a-marker-camera>
         <!-- Adding an OBJ file to an AR Project-->
         <a-entity position="0 0 0" scale="1 1 1"
-          collada-model=”url(cushion_armchair.dae)”>
+          collada-model=”url(leather_under.dae)”>
         </a-entity>
               
       </a-marker>
