--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       <a-marker-camera type='pattern' url='pattern-Globant_.patt'></a-marker-camera>
         <!-- Adding an OBJ file to an AR Project-->
         <a-entity position="0 0 0" scale="1 1 1"
-            obj-model="obj: url(leather_under.obj); 
-            mtl: url(leather_under.mtl)">
+            obj-model="obj: url(Sunglasses.obj); 
+            mtl: url(Sunglasses.mtl)">
         </a-entity>
               
       </a-marker>
