--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- Adding an OBJ file to an AR Project-->
         <a-entity position="0 0 0" scale="1 1 1"
             obj-model="obj: url(model.obj); 
-            mtl: url(model.mtl)">
+            mtl: url(materials.mtl)">
         </a-entity>
               
       </a-marker>
