--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,4 @@
-<script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 
@@ -7,10 +7,12 @@
  
     <a-marker preset="hiro">
       <!--Adding a glTF 2.0 model to your scene-->
-      <a-entity
-      gltf-model-next="src: url(scene.gltf);"
-      >
-      </a-entity>
+      <a-scene>
+  
+    <a-asset-item id="chair" src="scene.gltf"></a-asset-item>
+    </a-assets>
+
+    <a-entity gltf-model="#chair"></a-entity>
       
     </a-marker>
 
