--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
     <a-asset-item id="chair" src="scene.gltf"></a-asset-item>
     </a-assets>
 
-    <a-entity position="0 3 0" rotation="0 90 0" scale="3 3 3" gltf-model="#chair"></a-entity>
+    <a-entity light="type:directional; castShadow:true;" scale="3 3 3" gltf-model="#chair"></a-entity>
       
     </a-marker>
 
