--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
     <a-asset-item id="chair" src="scene.gltf"></a-asset-item>
     </a-assets>
 
-    <a-entity position="0 0 0" scale="0.5 1 2" gltf-model="#chair"></a-entity>
+    <a-entity position="0 0 0"  gltf-model="#chair"></a-entity>
       
     </a-marker>
 
