--- a/pot.html
+++ b/pot.html
@@ -12,7 +12,7 @@
     <a-asset-item id="pot" src="llama-pot/scene.gltf"></a-asset-item>
     </a-assets>
 
-    <a-entity position="0 0 0" gltf-model="#pot"></a-entity>
+    <a-entity gltf-model="#pot"></a-entity>
       
     </a-marker>
 
