--- a/gramophone.html
+++ b/gramophone.html
@@ -5,7 +5,7 @@
   <a-scene embedded arjs="sourceType: webcam;">
       <a-marker-camera type='pattern' url='pattern-Globant_.patt'></a-marker-camera>
         <!-- Adding an OBJ file to an AR Project-->
-        <a-entity position="0 0 0" scale="1 1 1" 
+        <a-entity
             obj-model="obj: url(model.obj); 
             mtl: url(materials.mtl)">
         </a-entity>
