--- a/gramophone.html
+++ b/gramophone.html
@@ -3,7 +3,8 @@
 
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs="sourceType: webcam;">
-      <a-marker-camera type='pattern' url='pattern-Globant_.patt'></a-marker-camera>
+     <!-- <a-marker-camera type='pattern' url='pattern-Globant_.patt'></a-marker-camera> -->
+    <a-marker preset="hiro">
         <!-- Adding an OBJ file to an AR Project-->
         <a-entity
             obj-model="obj: url(model.obj); 
