--- a/mug.html
+++ b/mug.html
@@ -12,7 +12,7 @@
     <a-asset-item id="mug" src="hands_on_facility_mug/scene.gltf"></a-asset-item>
     </a-assets>
 
-    <a-entity gltf-model="#mug"></a-entity>
+    <a-entity position="0 0 0" scale="1 1 1" gltf-model="#mug"></a-entity>
       
     </a-marker>
 
