--- a/buddha.html
+++ b/buddha.html
@@ -9,10 +9,10 @@
       <!--Adding a glTF 2.0 model to your scene-->
       <a-scene>
   
-    <a-asset-item id="mug" src="buddha/scene.gltf"></a-asset-item>
+    <a-asset-item id="buddha" src="buddha/scene.gltf"></a-asset-item>
     </a-assets>
 
-    <a-entity position="0 0 0" scale="1 1 1" gltf-model="#mug"></a-entity>
+    <a-entity position="0 0 0" scale="1 1 1" gltf-model="#buddha"></a-entity>
       
     </a-marker>
 
