--- a/word.html
+++ b/word.html
@@ -1,24 +1,9 @@
 <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-<script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 
 <body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded arjs='sourceType: webcam;'>
- 
-    <a-marker preset="hiro">
-      <!--Adding a glTF 2.0 model to your scene-->
-      <a-scene>
-  
-    <a-asset-item id="buddha" src="buddha/scene.gltf"></a-asset-item>
-    </a-assets>
-
-    <a-entity text-geometry="value: DXP NEXT!!!; font: #exoFont;"
-			material="color: yellow; src: #pixels; repeat: 0.5 0.5;" 
-			rotation="-90 0 0">
-		</a-entity>
-      
-    </a-marker>
-
-    <a-entity camera></a-entity>
-  </a-scene>
+   <a-scene embedded arjs='sourceType: webcam;'>
+      <a-text text="value: Whatever \n you want !" color="blue"    rotation="-90 0 0"></a-text>
+      <a-marker-camera preset='hiro'></a-marker-camera>
+   </a-scene>
 </body>
