--- a/word.html
+++ b/word.html
@@ -3,7 +3,7 @@
 
 <body style='margin : 0px; overflow: hidden;'>
    <a-scene embedded arjs='sourceType: webcam;'>
-      <a-text text="value: Whatever \n you want !" color="blue"    rotation="-90 0 0"></a-text>
+      <a-text text="value: GLobant DXP Next!!!" color="blue"    rotation="-90 0 0"></a-text>
       <a-marker-camera preset='hiro'></a-marker-camera>
    </a-scene>
 </body>
